# clean-application/src/test/resources/my-openapi.json
@@ -205,6 +205,9 @@
   "components": {
     "schemas": {
       "CustomerDto": {
+        "required": [
+          "name"
+        ],
         "type": "object",
         "properties": {
           "id": {
@@ -212,6 +215,8 @@
             "format": "int64"
           },
           "name": {
+            "maxLength": 2147483647,
+            "minLength": 5,
             "type": "string",
             "description": "Name of the customer"
           },
@@ -228,7 +233,7 @@
           "gold": {
             "type": "boolean"
           },
-          "goldMemberRemovalReason": {
+          "goldMemberRemovalComment": {
             "type": "string"
           }
         }
@@ -282,6 +287,10 @@
           },
           "site": {
             "$ref": "#/components/schemas/Site"
+          },
+          "discountPercentage": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
